# jordanbojanic

.claude/: claude.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  docker-compose.dramatiq.yml  pyproject.toml
backend/app/: main.py
backend/app/api/v1/auth/: endpoints.py
backend/app/api/v1/contact/: endpoints.py
backend/app/api/v1/dramatiq/: endpoints.py
backend/app/api/v1/role/: endpoints.py
backend/app/auth/: endpoints.py  model.py  service.py
backend/app/contact/: admin_endpoints.py  endpoints.py  model.py  public_endpoints.py  service.py  thread_auth.py
backend/app/core/: config.py  exception_handlers.py  logging_config.py  middleware.py
backend/app/core/security/: api.py  helpers.py  social.py
backend/app/db/: db_manager.py  dependencies.py
backend/app/docs/: docs.py
backend/app/dramatiq/: dramatiq_config.py  job_tracker_middleware.py
backend/app/models/contact/: model.py
backend/app/models/user/: model.py
backend/app/models/util/: model.py
backend/app/role/: endpoints.py  model.py  service.py
backend/app/services/auth/: auth_service.py
backend/app/services/dramatiq/: dramatiq_service.py
backend/app/services/email/: email.py
backend/app/services/role/: role_service.py
backend/app/services/user/: user_service.py
backend/app/tasks/: background_tasks.py
backend/app/user/: endpoints.py  helpers.py  magic_link_model.py  model.py  service.py
backend/app/utills/: dependencies.py  health_checks.py  util.py
backend/app/utills/email/: email.py
backend/tools/: manage.py  redis-docker-compose.yaml
(+80 files in other folders)
